# simple_mpc

./: .gitignore  README.md  mpc.py  mpc_casadi.py  pyproject.toml  readme.md  requirements.txt  test.ipynb  test_pyqt.py
src/mpc/: mpc_back_box.py  mpc_casadi.py
src/mpc_view/: camera_view.py  main.py
src/mpc_view/main_widget/: __init__.py  main_widget.ui
src/mpc_view/scene/: __init__.py
src/mpc_view/scene/items/: car.py  editable_line.py  line_endpoint.py
src/mpc_view/view/: __init__.py  view.ui
src/mpc_view/view/scene/: __init__.py
src/mpc_view/view/scene/items/: car.py  circle.py  line_endpoint.py  polygon.py  vertex_editor.py
tests/: generating_c_code.py  test.ipynb  test_intersection.py  test_pp.py
